again fixed for edge on mobile

--- a/client/src/App.sass
+++ b/client/src/App.sass
@@ -74,8 +74,8 @@ body
   flex-direction: column
   justify-content: space-between
   position: relative
-  height: 100vh
-  max-height: 100vh
+  height: 100dvh
+  max-height: 100dvh
   overflow: hidden
 
 .chat-list__container
@@ -400,13 +400,13 @@ body
   display: flex
   flex-direction: column
   width: 100%
-  height: 100vh
+  height: 100dvh
   h1
     align-self: center
 
 .login-form
   align-self: center
-  height: 100vh
+  height: 100dvh
   display: inline-block
   vertical-align: middle
 
